infra/kubernetes/common/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${ENVIRONMENT}
  labels:
    project: ${PROJECT}

---

apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ingress
  labels:
    project: ${PROJECT}  

---

apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    project: ${PROJECT}
---

apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
  labels:
    project: ${PROJECT}
