infra/kubernetes/common/grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: rootdr-letsencrypt2
spec:
  ingressClassName: nginx
  rules:
  - host: monitoring.rootdr.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
  tls:
   - hosts:
     - monitoring.rootdr.info
     secretName: rootdr-issuer-account-ingress-key2
